# NarhvalTest1

./: .env.example  .gitignore  README.md  WEBAPP_README.md  pyproject.toml  requirements-server.txt  server.py  setup_database.sh  start_webapp.sh
backend/: app.py  requirements.txt
client/: app.js  index.html  style.css
django_app/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
django_app/prompt_agent/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
django_app/prompt_agent/migrations/: 0001_initial.py
django_app/prompt_agent/templates/prompt_agent/: base.html  history.html  index.html  prompt_detail.html  session_form.html  session_list.html
frontend/: index.html  package.json
frontend/src/: App.jsx  styles.css
scripts/: __init__.py  run_agent.py
src/: __init__.py  agent_cli.py  openai_agent.py
tests/: test_openai_agent.py
